first iteration of login page, no interactive features and classes need to be sized

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="loginPageContainer">
+        <div class="leftContainer">
+            <h1>Adventure is Calling!</h1>
+            <h2>Your ultimate US National Park trip planning resource.</h2>
+        </div>
+        <div class="loginContainer">
+            <h2>Sign In</h2>
+            <form>
+                <label>Username</label><br>
+                <input type="text" id="userName" name="login" required><br><br>
+                <label>Password</label><br>
+                <input type="password" id="password" name="login" required><br><br>
+                <button id="loginBtn">Login</button>
+            </form>
+            <p href="forgotPassword.html">Forgot Password?</p>
+            <p href="createAccount.html">Create Account</p>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
