--- a/index.html
+++ b/index.html
@@ -8,21 +8,41 @@
 </head>
 <body>
     <div class="loginPageContainer">
-        <div class="leftContainer">
-            <h1>Adventure is Calling!</h1>
-            <h2>Your ultimate US National Park trip planning resource.</h2>
-        </div>
-        <div class="loginContainer">
-            <h2>Sign In</h2>
-            <form>
-                <label>Username</label><br>
-                <input type="text" id="userName" name="login" required><br><br>
-                <label>Password</label><br>
-                <input type="password" id="password" name="login" required><br><br>
-                <button id="loginBtn">Login</button>
-            </form>
-            <p href="forgotPassword.html">Forgot Password?</p>
-            <p href="createAccount.html">Create Account</p>
+        <div class="loginContainerBanner"></div>
+            <div class="leftContainer">
+                <h1>Adventure is Calling!</h1>
+                <h2>Your ultimate US National Park trip planning resource. Centralized information to explore each park at your finger tips.</h2>
+            </div>
+            <div class="loginContainer">
+
+                <h2>Sign In</h2>
+
+                <div class="inputBox">
+                    <input type="text" placeholder="Username" required>
+                </div>
+
+                <div class="inputBox">
+                    <input type="password" placeholder="Password" required>
+                </div>
+
+                <div class="rememberForgot">
+                    <label>
+                        <input type="checkbox">Remember Me?
+                    </label>
+                    <a href="#">Forgot Password?</a>
+                </div>
+
+                <button type="submit" class="submitBtn">Sign In</button>
+
+                <div class="register">
+                    <p>
+                        Don't have an account?
+                        <a href="#">Register</a>
+                    </p>
+                </div>
+            </div>
+    
+            
         </div>
     </div>
     <script src="index.js"></script>
